src/test/deca/syntax/invalid/synt/overflow_positive_integer.deca
// @expected_output deca:8:12:
/*
    Description : Initialisation d'un int avec une valeur trop importante

    Résultat : OK
*/
{
    int x = 4500000000;
}
